# aoc2020

./: Cargo.toml  LICENSE  env.nix  rust.nix
2020/: Cargo.toml
2020/src/eighteen/: main.rs
2020/src/eighteenplus/: calc.pest  main.rs
2020/src/eightplus/: main.rs
2020/src/eleven/: main.rs
2020/src/elevenplus/: main.rs
2020/src/fifteen/: main.rs
2020/src/fifteenplus/: main.rs
2020/src/five/: main.rs
2020/src/four/: main.rs
2020/src/fourteen/: main.rs
2020/src/fourteenplus/: main.rs
2020/src/nineplus/: main.rs
2020/src/nineteen/: main.rs
2020/src/nineteenplus/: main.rs
2020/src/one/: main.rs
2020/src/oneplus/: main.rs
2020/src/seven/: main.rs
2020/src/seventeen/: main.rs
2020/src/seventeenplus/: main.rs
2020/src/sixplus/: main.rs
2020/src/sixteen/: main.rs
2020/src/sixteenplus/: main.rs
2020/src/ten/: main.rs
2020/src/tenplus/: main.rs
2020/src/thirteen/: main.rs
2020/src/thirteenplus/: main.rs
2020/src/three/: main.rs
2020/src/twelveplus/: main.rs
2021/: Pipfile  pyproject.toml
2021/one/: one.py
2021/oneplus/: oneplus.py
2021/two/: two.py
2021/twoplus/: twoplus.py
src/eight/: main.rs
src/eightplus/: main.rs
src/fiveplus/: main.rs
src/four/: main.rs
src/fourplus/: main.rs
src/nine/: main.rs
src/nineplus/: main.rs
src/one/: main.rs
src/seven/: main.rs
src/sevenplus/: main.rs
src/six/: main.rs
src/sixplus/: main.rs
src/ten/: main.rs
src/three/: main.rs
src/threeplus/: main.rs
src/twelve/: main.rs
src/two/: main.rs
src/twoplus/: main.rs
