[package]
name = "aoc"
version = "0.1.0"
authors = ["Nicholas Skehin <nicholas@skeh.in>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
counter = "0"
petgraph = "0"
cached = "0"
bounded-vec-deque = "0"
modinverse = "0"
itertools = "0.10.1"
pest = "2.1.3"
pest_derive = "2.1.0"

[[bin]]
name = "one"
path = "src/one/main.rs"

[[bin]]
name = "oneplus"
path = "src/oneplus/main.rs"

[[bin]]
name = "two"
path = "src/two/main.rs"

[[bin]]
name = "twoplus"
path = "src/twoplus/main.rs"

[[bin]]
name = "three"
path = "src/three/main.rs"

[[bin]]
name = "threeplus"
path = "src/threeplus/main.rs"

[[bin]]
name = "four"
path = "src/four/main.rs"

[[bin]]
name = "fourplus"
path = "src/fourplus/main.rs"

[[bin]]
name = "five"
path = "src/five/main.rs"

[[bin]]
name = "fiveplus"
path = "src/fiveplus/main.rs"

[[bin]]
name = "six"
path = "src/six/main.rs"

[[bin]]
name = "sixplus"
path = "src/sixplus/main.rs"

[[bin]]
name = "seven"
path = "src/seven/main.rs"

[[bin]]
name = "sevenplus"
path = "src/sevenplus/main.rs"

[[bin]]
name = "eight"
path = "src/eight/main.rs"

[[bin]]
name = "eightplus"
path = "src/eightplus/main.rs"

[[bin]]
name = "nine"
path = "src/nine/main.rs"

[[bin]]
name = "nineplus"
path = "src/nineplus/main.rs"

[[bin]]
name = "ten"
path = "src/ten/main.rs"

[[bin]]
name = "tenplus"
path = "src/tenplus/main.rs"

[[bin]]
name = "eleven"
path = "src/eleven/main.rs"

[[bin]]
name = "elevenplus"
path = "src/elevenplus/main.rs"

[[bin]]
name = "twelve"
path = "src/twelve/main.rs"

[[bin]]
name = "twelveplus"
path = "src/twelveplus/main.rs"

[[bin]]
name = "thirteen"
path = "src/thirteen/main.rs"

[[bin]]
name = "thirteenplus"
path = "src/thirteenplus/main.rs"

[[bin]]
name = "fourteen"
path = "src/fourteen/main.rs"

[[bin]]
name = "fourteenplus"
path = "src/fourteenplus/main.rs"

[[bin]]
name = "fifteen"
path = "src/fifteen/main.rs"

[[bin]]
name = "fifteenplus"
path = "src/fifteenplus/main.rs"

[[bin]]
name = "sixteen"
path = "src/sixteen/main.rs"

[[bin]]
name = "sixteenplus"
path = "src/sixteenplus/main.rs"

[[bin]]
name = "seventeen"
path = "src/seventeen/main.rs"

[[bin]]
name = "seventeenplus"
path = "src/seventeenplus/main.rs"

[[bin]]
name = "eighteen"
path = "src/eighteen/main.rs"

[[bin]]
name = "eighteenplus"
path = "src/eighteenplus/main.rs"

[[bin]]
name = "nineteen"
path = "src/nineteen/main.rs"

[[bin]]
name = "nineteenplus"
path = "src/nineteenplus/main.rs"
